# ai-coach

./: .gitignore  ARCHITECTURE.md  PLAN.md  README.md  SPECIFICATION.md  pyproject.toml
review/: PR_4_COMMENTS_ASSESSMENT.md
scripts/: test.sh
src/coach/: agent.py  config.py  memory.py  scheduler.py  skills.py  sync.py
src/coach/interfaces/: cli.py  slack_bot.py
tests/: test_agent.py  test_cli.py  test_config.py  test_memory.py  test_scheduler.py  test_skills.py  test_slack.py  test_sync.py
